# minesweeper

./: CMakeLists.txt  README.md
design/: minesweeper-design.xd
src/: board.hpp  main_gui.cpp  node.cpp  node.hpp
src/ai/: ai.hpp
src/game/: board.cpp  board.hpp  node.cpp  node.hpp
src/gui/: gui.cpp  gui.hpp
